--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,3 +1,19 @@
-h3{
-  color: red;
+h5{
+  color: brown;
+}
+body{
+  background-color: black;
+}
+h1{
+  text-align: center;
+  color: black;
+  text-transform: capitalize;
+  padding-bottom: 10px;
+  padding-top: 30px;
+}
+p{
+  font-weight: bold;
+}
+.list-group-item{
+  color: white;
 }
