--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,17 +1,31 @@
-h5{
-  color: brown;
-}
 
-h1{
+.celu{
   text-align: center;
-  color: black;
+  color: #e60073;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   text-transform: capitalize;
   padding-bottom: 10px;
-  padding-top: 30px;
+  padding-top: 50px;
 }
-p{
-  font-weight: bold;
+
+body{
+  background-color: black;
 }
-.list-group-item{
+.marca{
   color: white;
+  padding-left: 30px;
 }
+.accesorios{
+  color: white;
+  padding-bottom: 200px;
+}
+.subtitulo{
+  color: white;
+  padding-bottom: 200px;
+  text-align: center;
+}
+.fotos{
+  display: flex;
+  text-align: center;
+}
+
