--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,31 +1,27 @@
-
 .celu{
   text-align: center;
   color: #e60073;
   text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   text-transform: capitalize;
-  padding-bottom: 10px;
-  padding-top: 50px;
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
 
 body{
   background-color: black;
+  margin: border red;
 }
-.marca{
-  color: white;
-  padding-left: 30px;
-}
-.accesorios{
-  color: white;
-  padding-bottom: 200px;
-}
-.subtitulo{
-  color: white;
-  padding-bottom: 200px;
-  text-align: center;
-}
+
 .fotos{
+  display: grid;
   display: flex;
-  text-align: center;
+  grid-template-columns: auto;
+  gap: 60px;
+  padding-right: 200px;
+  justify-content: left;
 }
+#root{
+  background-color: black;
+}
+
 
