--- a/src/components/styles/ItemDetail.css
+++ b/src/components/styles/ItemDetail.css
@@ -19,7 +19,7 @@
     padding-bottom: 20px;
 }
 .precio{
-    color: pink;
+    color: green;
     padding-bottom: 200px;
 }
 .contador{
@@ -56,7 +56,7 @@
     padding-bottom: 20px;
 }
 .precio{
-    color: pink;
+    color: green;
     padding-bottom: 200px;
 }
 .contador{
