--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,18 +1,21 @@
-.celu{
+.celu {
   text-align: center;
   color: #e60073;
-  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073,
+    0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   text-transform: capitalize;
-  padding-bottom: 100px;
+  padding-bottom: 20px;
   padding-top: 100px;
 }
-
 body{
   background-color: black;
- 
 }
 
-.fotos{
+#root{
+  background-color: black;
+}
+
+.fotos {
   display: grid;
   display: flex;
   grid-template-columns: auto;
@@ -20,12 +23,22 @@ body{
   padding-right: 200px;
   justify-content: left;
 }
-#root{
-  background-color: black;
+
+
+.contenido {
+  padding-bottom: 100px;
 }
 
-.main-container{height:1500px}
-.container h1{font-size:3rem;}
-
-
-
+.fotoUno {
+  padding: 50px;
+}
+.App-header {
+  background-color: #282c34;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items:stretch;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
