--- a/src/components/styles/ItemListContainer.css
+++ b/src/components/styles/ItemListContainer.css
@@ -10,6 +10,7 @@ ul {
 .grilla {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
 
 @media screen and (max-width: 1370px) {
