--- a/src/components/styles/ItemDetail.css
+++ b/src/components/styles/ItemDetail.css
@@ -1,6 +1,6 @@
 .item-detail-container {
   display: flex;
-  padding-top: 20px;
+  padding-top: 150px;
   padding-left: 15px;
 }
 
@@ -15,16 +15,21 @@
   color: white;
 }
 .precio {
-  color: white;
+  color: #bf9f11;
+  padding-bottom: 100px;
 }
 .cantSelect {
   color: #bf9f11;
 }
+.seleccionarC {
+  color: white;
+  padding-bottom: 10px;
+}
 
 @media screen and (max-width: 390px) {
   .image-product {
-    width: 350px;
-    height: 501px;
+    width: 300px;
+    height: 370px;
   }
   img {
     width: 100%;
@@ -43,14 +48,14 @@
     color: white;
   }
   .precio {
-    color: white;
+    color: #bf9f11;
+    padding-bottom: 50px;
   }
   .cantSelect {
     color: #bf9f11;
   }
-  .carro{
-    width: 350px;
-    height: 501px;
-
+  .seleccionarC {
+    color: white;
+    padding-bottom: 10px;
   }
 }
